test_case/rust-lang_rust/56765_447101855_22.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/associated-types/associated-types-multiple-types-one-trait.rs","byte_start":690,"byte_end":696,"line_start":28,"line_end":28,"column_start":5,"column_end":11,"is_primary":true,"text":[{"text":"    want_x(t); //~ ERROR type mismatch","highlight_start":5,"highlight_end":11}],"label":"expected associated type, found u32","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"expected type `<T as Foo>::X`\n   found type `u32`","code":null,"level":"note","spans":[],"children":[],"rendered":null},{"message":"required by `want_x`","code":null,"level":"note","spans":[{"file_name":"/checkout/src/test/ui/associated-types/associated-types-multiple-types-one-trait.rs","byte_start":997,"byte_end":1027,"line_start":52,"line_end":52,"column_start":1,"column_end":31,"is_primary":true,"text":[{"text":"fn want_x<T:Foo<X=u32>>(t: &T) { }","highlight_start":1,"highlight_end":31}],"label":null,"suggested_replacement":null,"suggestion_applicabilitylements `Trait`.         |\n//                                     |\n//                             This says not only must\n//                             `T` be an impl of `Trait`\n//                             but also that the impl\n//                             must assign the type `u32`\n//                             to the associated type.\n    println!(\"in foo\");\n}\n\nimpl Trait for i8 { type AssociatedType = &'static str; }\n//~~~~~~~~~~~~~~~   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n//      |                             |\n// `i8` does have                     |\n// implementation                     |\n// of `Trait`...                      |\n//                     ... but it is an implementation\n//                     that assigns `&'static str` to\n//                     the associated type.\n\nfoo(3_i8);\n// Here, we invoke `foo` with an `i8`, which does not satisfy\n// the constraint `<i8 as Trait>::AssociatedType=u32`, and\n// therefore the type-checker complains with this error code.\n